# ryzenai-rs

./: .gitignore  Cargo.toml  README.md
ai-common/: Cargo.toml
ai-common/src/: lib.rs  runtime.rs
mobilenet/: Cargo.toml
mobilenet/models/: mobilenetv2_int.onnx
mobilenet/src/: args.rs  image.rs  main.rs
resnet/: .gitignore  Cargo.toml
resnet/src/: args.rs  image.rs  main.rs
runtime/: init.bat
yolov8/: Cargo.toml
yolov8/models/: download.py
yolov8/src/: args.rs  image.rs  main.rs
