[package]
name = "resnet"
version = "0.1.0"
edition = "2021"

[dependencies]
cifar-ten = { git = "https://github.com/rede97/cifar-ten.git" }
# cifar-ten = { git = "https://github.com/rede97/cifar-ten.git", features = ["download"] }

image = "0.25.5"
ndarray = "0.16.1"
ort = { path = "../ort", features = ["load-dynamic"] }
windows = { version = "0.60.0", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
] }
