[package]
name = "yolov8"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.5"
ndarray = "0.16.1"
ort = { git = "https://github.com/rede97/ort.git", branch = "ryzenai", features = ["load-dynamic"] }
ai-common = { path = "../ai-common" }
simplelog = "0.12.2"
log = "0.4.26"
clap = { version = "4.5", features = ["derive"] }
